src/main/java/com/calclogic/parse/ProofMethodParser.java
// Generated from .\ProofMethod.g4 by ANTLR 4.8


package com.calclogic.parse;

import com.calclogic.lambdacalculo.Const;
import com.calclogic.lambdacalculo.App;
import com.calclogic.lambdacalculo.Term;
import java.util.LinkedList;


import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ProofMethodParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DM=1, SS=2, TR=3, WE=4, ST=5, ND=6, CO=7, CR=8, AI=9, CA=10, WI=11, O_PAR=12, 
		C_PAR=13, WHITESPACE=14;
	public static final int
		RULE_start_rule = 0, RULE_method = 1, RULE_method_tail = 2, RULE_method_base = 3;
	private static String[] makeRuleNames() {
		return new String[] {
			"start_rule", "method", "method_tail", "method_base"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'DM'", "'SS'", "'TR'", "'WE'", "'ST'", "'ND'", "'CO'", "'CR'", 
			"'AI'", "'CA'", "'WI'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DM", "SS", "TR", "WE", "ST", "ND", "CO", "CR", "AI", "CA", "WI", 
			"O_PAR", "C_PAR", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ProofMethod.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProofMethodParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Start_ruleContext extends ParserRuleContext {
		public Term value;
		public MethodContext method;
		public MethodContext method() {
			return getRuleContext(MethodContext.class,0);
		}
		public Start_ruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start_rule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProofMethodListener ) ((ProofMethodListener)listener).enterStart_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProofMethodListener ) ((ProofMethodListener)listener).exitStart_rule(this);
		}
	}

	public final Start_ruleContext start_rule() throws RecognitionException {
		Start_ruleContext _localctx = new Start_ruleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start_rule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(8);
			((Start_ruleContext)_localctx).method = method();
			 ((Start_ruleContext)_localctx).value = ((Start_ruleContext)_localctx).method.value; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodContext extends ParserRuleContext {
		public Term value;
		public Method_baseContext method_base;
		public Method_tailContext method_tail;
		public Method_baseContext method_base() {
			return getRuleContext(Method_baseContext.class,0);
		}
		public Method_tailContext method_tail() {
			return getRuleContext(Method_tailContext.class,0);
		}
		public MethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProofMethodListener ) ((ProofMethodListener)listener).enterMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProofMethodListener ) ((ProofMethodListener)listener).exitMethod(this);
		}
	}

	public final MethodContext method() throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_method);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(11);
			((MethodContext)_localctx).method_base = method_base();
			setState(12);
			((MethodContext)_localctx).method_tail = method_tail();

			                                Term aux = ((MethodContext)_localctx).method_base.value; 
				                        for (Term it: ((MethodContext)_localctx).method_tail.value) 
			                                    aux = new App(aux,it);
							((MethodContext)_localctx).value =  aux;  
			                               
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Method_tailContext extends ParserRuleContext {
		public LinkedList<Term> value;
		public Method_baseContext method_base;
		public Method_tailContext t;
		public Method_baseContext method_base() {
			return getRuleContext(Method_baseContext.class,0);
		}
		public Method_tailContext method_tail() {
			return getRuleContext(Method_tailContext.class,0);
		}
		public Method_tailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method_tail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProofMethodListener ) ((ProofMethodListener)listener).enterMethod_tail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProofMethodListener ) ((ProofMethodListener)listener).exitMethod_tail(this);
		}
	}

	public final Method_tailContext method_tail() throws RecognitionException {
		Method_tailContext _localctx = new Method_tailContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_method_tail);
		try {
			setState(20);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DM:
			case SS:
			case TR:
			case WE:
			case ST:
			case ND:
			case CO:
			case CR:
			case AI:
			case CA:
			case WI:
			case O_PAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(15);
				((Method_tailContext)_localctx).method_base = method_base();
				setState(16);
				((Method_tailContext)_localctx).t = method_tail();
				 ((Method_tailContext)_localctx).t.value.add(0,((Method_tailContext)_localctx).method_base.value); ((Method_tailContext)_localctx).value =  ((Method_tailContext)_localctx).t.value; 
				}
				break;
			case EOF:
			case C_PAR:
				enterOuterAlt(_localctx, 2);
				{
				 ((Method_tailContext)_localctx).value =  new LinkedList<Term>(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Method_baseContext extends ParserRuleContext {
		public Term value;
		public MethodContext method;
		public TerminalNode DM() { return getToken(ProofMethodParser.DM, 0); }
		public TerminalNode SS() { return getToken(ProofMethodParser.SS, 0); }
		public TerminalNode TR() { return getToken(ProofMethodParser.TR, 0); }
		public TerminalNode WE() { return getToken(ProofMethodParser.WE, 0); }
		public TerminalNode ST() { return getToken(ProofMethodParser.ST, 0); }
		public TerminalNode ND() { return getToken(ProofMethodParser.ND, 0); }
		public TerminalNode CO() { return getToken(ProofMethodParser.CO, 0); }
		public TerminalNode CR() { return getToken(ProofMethodParser.CR, 0); }
		public TerminalNode AI() { return getToken(ProofMethodParser.AI, 0); }
		public TerminalNode CA() { return getToken(ProofMethodParser.CA, 0); }
		public TerminalNode WI() { return getToken(ProofMethodParser.WI, 0); }
		public TerminalNode O_PAR() { return getToken(ProofMethodParser.O_PAR, 0); }
		public MethodContext method() {
			return getRuleContext(MethodContext.class,0);
		}
		public TerminalNode C_PAR() { return getToken(ProofMethodParser.C_PAR, 0); }
		public Method_baseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method_base; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProofMethodListener ) ((ProofMethodListener)listener).enterMethod_base(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProofMethodListener ) ((ProofMethodListener)listener).exitMethod_base(this);
		}
	}

	public final Method_baseContext method_base() throws RecognitionException {
		Method_baseContext _localctx = new Method_baseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_method_base);
		try {
			setState(49);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DM:
				enterOuterAlt(_localctx, 1);
				{
				setState(22);
				match(DM);
				((Method_baseContext)_localctx).value =  new Const("DM");
				}
				break;
			case SS:
				enterOuterAlt(_localctx, 2);
				{
				setState(24);
				match(SS);
				((Method_baseContext)_localctx).value =  new Const("SS");
				}
				break;
			case TR:
				enterOuterAlt(_localctx, 3);
				{
				setState(26);
				match(TR);
				((Method_baseContext)_localctx).value =  new Const("TR");
				}
				break;
			case WE:
				enterOuterAlt(_localctx, 4);
				{
				setState(28);
				match(WE);
				((Method_baseContext)_localctx).value =  new Const("WE");
				}
				break;
			case ST:
				enterOuterAlt(_localctx, 5);
				{
				setState(30);
				match(ST);
				((Method_baseContext)_localctx).value =  new Const("ST");
				}
				break;
			case ND:
				enterOuterAlt(_localctx, 6);
				{
				setState(32);
				match(ND);
				((Method_baseContext)_localctx).value =  new Const("ND");
				}
				break;
			case CO:
				enterOuterAlt(_localctx, 7);
				{
				setState(34);
				match(CO);
				((Method_baseContext)_localctx).value =  new Const("CO");
				}
				break;
			case CR:
				enterOuterAlt(_localctx, 8);
				{
				setState(36);
				match(CR);
				((Method_baseContext)_localctx).value =  new Const("CR");
				}
				break;
			case AI:
				enterOuterAlt(_localctx, 9);
				{
				setState(38);
				match(AI);
				((Method_baseContext)_localctx).value =  new Const("AI");
				}
				break;
			case CA:
				enterOuterAlt(_localctx, 10);
				{
				setState(40);
				match(CA);
				((Method_baseContext)_localctx).value =  new Const("CA");
				}
				break;
			case WI:
				enterOuterAlt(_localctx, 11);
				{
				setState(42);
				match(WI);
				((Method_baseContext)_localctx).value =  new Const("WI");
				}
				break;
			case O_PAR:
				enterOuterAlt(_localctx, 12);
				{
				setState(44);
				match(O_PAR);
				setState(45);
				((Method_baseContext)_localctx).method = method();
				setState(46);
				match(C_PAR);
				 ((Method_baseContext)_localctx).value =  ((Method_baseContext)_localctx).method.value; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}